--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular2-cookie": "^1.2.6",
     "angular2-text-mask": "^8.0.4",
     "angularfire2": "^4.0.0-rc.2",
+    "cep-promise": "^2.0.6",
     "core-js": "^2.4.1",
     "moment": "^2.19.1",
     "ngx-cookie-service": "^1.0.7",
