--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "moment": "^2.19.1",
     "ngx-cookie-service": "^1.0.7",
+    "node-correios": "^2.1.1",
     "pikaday": "^1.6.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
